--- a/buttons.css
+++ b/buttons.css
@@ -25,7 +25,7 @@ button {
 
 button:hover {
     color: white;
-    background-color: pink;
+    background: rgba(20, 150, 20, 0.8);
 }
 
 #start, #returnButton {
